# misc

./: .gitignore
ConorsCrispyCucumber/: Makefile  cucumber
aoc24/: langs.txt  ranking.txt
aoc24/_1-5/: day1.lua  day2.lua  day3.lua  day5.2.lua  day5.lua  main.lua  pretty.lua
aoc24/d1-5/: day4.1.lua  day4.2.lua  day5.1.lua  day5.2.lua
aoc24/d6-10/: Cargo.toml
aoc24/d6-10/src/: main.rs
aoc24/d6-10/src/days/: day6.rs
cbsh/: a.out  main  main.c
cool-war-game/: Cargo.toml  README.md
cool-war-game/src/: engine.rs  main.rs
doodle/: README.md  go.mod  go.sum  main.go
doodle/src/: init.go  main.dl  misc.go
doodle/src/ast/: expressions.go  statements.go  types.go
doodle/src/helper/: reflections.go
doodle/src/lexer/: handlers.go  lexer.go  tokens.go
doodle/src/parser/: expression.go  lookups.go  parser.go  statement.go  types.go
ecs/: .project  kls_database.db  settings.gradle.kts
ecs-zig/: build.zig  build.zig.zon
ecs-zig/.zig-cache/o/7b9966dff6e77f8ca947d0695f617ae5/: ecs_zig
ecs-zig/.zig-cache/o/a18628c87f5ad7db4f2c7b087ae9a1cc/: ecs_zig.lib
ecs-zig/.zig-cache/o/df4c1d2e28fecf0a061fe1c103e3fdd6/: dependencies.zig
ecs-zig/src/: ecs.zig  main.zig
ecs/app/: .project  build.gradle.kts
ecs/app/src/main/java/src/: Component.java  ComponentManager.java  ComponentType.java  Main.java
gloomsgate/src/: engine.py  main.py  settings.py
gnomemansland/: CMakeLists.txt  README.md  settings.toml
gnomemansland/client/include/: client.hpp  game.hpp  sprite.hpp  world.hpp
gnomemansland/client/src/: client.cpp  game.cpp  main.cpp  sprite.cpp  world.cpp
gnomemansland/server/: db.json
gnomemansland/server/include/: server.hpp  world_gen.hpp
gnomemansland/server/src/: main.cpp  perlin.cpp  server.cpp  world_gen.cpp
gnomemansland/shared/include/: engine.hpp  v2.hpp  v3.hpp
gnomemansland/shared/src/: engine.cpp
math/: Cargo.toml
math/src/: main.rs  main.rs.b
math/src/lang/: lexer.rs  mod.rs  parser.rs  tokens.rs  types.rs
math/src/lexer/: lexer.rs  tokens.rs
numbeo/: Cargo.toml  numbeo.txt
numbeo/src/: main.rs
solar-system/: build.zig  build.zig.zon
solar-system/resources/models/earth/: earth.abc  earth.ply  earth.stl  earth.usdc  earth.x3d
solar-system/resources/shaders/: gpt.frag.glsl  gpt.vert.glsl
solar-system/src/: lights.zig  main.zig  test  test.c  universe.zig
ted/: Cargo.toml  main.dl
ted/src/: main.rs
ted/src/lib/: buffer.rs  cli.rs  mod.rs  thread.rs  ui.rs  utils.rs
